test/should-fail/变量重名-4.j
function test takes integer a returns nothing
    local boolean test
endfunction